--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ckeditor5-build-full",
+  "name": "ckeditor5-build-custom",
   "version": "3.0.0",
   "description": "The customize full features for classic editor build of CKEditor 5 – the best browser-based rich text editor. Thanks for CKEditor.",
   "publishConfig": {
@@ -36,13 +36,6 @@
   ],
   "author": "TMH-SE",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/TMH-SE/ckeditor5-build-full/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/TMH-SE/ckeditor5-build-full.git"
-  },
   "devDependencies": {
     "@ckeditor/ckeditor5-adapter-ckfinder": "^28.0.0",
     "@ckeditor/ckeditor5-alignment": "^28.0.0",
